add lombok support with single jar due to version problem.