@@ -14,6 +14,17 @@ configurations {
     extraLibs
 }
 
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
+        if (JavaVersion.current() == JavaVersion.VERSION_1_9) {
+            options.compilerArgs << "--add-modules=java.activation,java.xml.ws.annotation"
+        }
+
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.235'
@@ -26,8 +37,7 @@ dependencies {
     compile 'com.amazonaws:aws-lambda-java-log4j:1.0.0'
     compile 'com.amazonaws:aws-lambda-java-log4j2:1.0.0'
     compile 'joda-time:joda-time:2.9.9'
-    compile 'org.projectlombok:lombok:1.16.18'
-
+    //compile 'org.projectlombok:lombok:1.16.18'
 }
 
 jar {
